fix text spacing

--- a/static/css/stylemng.css
+++ b/static/css/stylemng.css
@@ -1,5 +1,5 @@
 tr td:first-child p{
-    width: 20rem;
+    width: 15rem;
     margin-bottom: -.5rem;
 }
 
@@ -123,126 +123,6 @@ th:last-child {
     text-align: left;
     
 }
-/* 
-.btn_cancel {
-    background-color: transparent;
-    color: black;
-    margin-bottom: .5rem;
-    text-align: right;
-    border:none;
-    max-width: screen;
-} */
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
-
-body{
-    min-height: 100vh;
-    background-image: url(/static/img/bg2.png);
-    background-size: cover;
-    background-position: center;
-}
-
-nav{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-
-.nav-right{
-    display: flex;
-    justify-content: space-between;
-}
-
-#search {
-    width: 100%;
-    min-width: 20rem;
-    max-width: 40rem;
-    height: 40px;
-    border: 1px solid #9CA3B5;
-    border-radius: 10px;
-    text-align: left;
-    padding-left: 20px;
-    padding-right: 10px;
-    font-size: 15px;
-    box-sizing: border-box;
-}
-
-a{
-    text-decoration: none;
-    font-family: "Poppins", sans-serif;
-    font-weight: 750;
-    color: black;
-}
-
-.logged{
-    height: 35px;
-    width: 100px;
-    display: flex;
-}
-
-.log{
-    border-color: #761EAE;
-    border: 2px;
-    border-style: solid;
-    background-color: white;
-    border-radius: 10px;
-    height: 35px;
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
-}
-
-.reg{
-    color: white;
-    border-radius: 10px;
-    background-color: #761EAE;
-    height: 35px;
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.search button {
-    background-color: transparent;
-    border: none;
-    margin-left: -2rem;
-}
-
-.alls{
-    width: 80%;
-    margin: 2rem auto;
-}
-
-.ups{
-    display: flex;
-    flex-direction: row-reverse;
-    width: 95%;
-    margin: 1.5rem 0;
-}
-
-.ups button{
-    background-color: transparent;
-    border: none;
-}
-
-.ups i{
-    font-size: 1.5rem;
-}
-
-.inform {
-    margin: 0 1rem;
-} */
 
 i:hover{
     transform: scale(1.1);
